# throughline

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  agent_audit.py  agent_preflight.py  agent_session_hook.py  audit_diverged_runs.py  ci-agent-manifest.yml  data_qa.py  debug_bad_rag.py  demo_rag.py  doc_extract.py  rag_docs.py  report_gen.py  support_agent.py
examples/artifacts/: README.md  agent-audit-token-metrics.md  claude-decision-budget-bench.json  claude-decision-budget-bench.md  codex-diverged-audit.canvas.tsx  codex-diverged-audit.json  codex-diverged-audit.md  harness-workflow-verification.canvas.tsx
examples/corpus/obsidian/: Guardrails.md  Home.md  Lineage.md  RAG Operations.md
examples/data/: agent.lock.json  customers.csv  sales.csv
examples/data/agent_sessions/: baseline.jsonl  candidate.jsonl
examples/data/agent_sessions/codex-diverged/: SOURCES.md  baseline.jsonl  candidate.jsonl
examples/documents/: invoice.txt
examples/presets/: agent-audit.toml  agent-preflight.toml  data-qa.toml  doc-extract.toml  my-rag.toml  rag-docs-team.toml  rag-docs.toml  report-gen.toml  support-agent.toml
examples/surgical_context/: README.md  adapter.py  ask_lineage.py  impact_note.py
src/followers/: __init__.py  cli.py  errors.py  flow.py  middleware.py  presets.py  registry.py  step.py
src/followers/adapters/: __init__.py  llm.py  rag.py
src/followers/contrib/: __init__.py  demo.py  mcp.py
src/followers/modules/: __init__.py  cache.py  citations.py  debug.py  lineage.py  observe.py  validate.py
src/followers/presets/: demo.toml
src/throughline/: __init__.py  cli.py  context.py  errors.py  flow.py  middleware.py  presets.py  registry.py  step.py  store.py
src/throughline/adapters/: __init__.py  llm.py  mcp.py  rag.py
src/throughline/adapters/transcripts/: __init__.py  claude_code.py  codex.py  common.py  cursor.py
src/throughline/contrib/: demo.py  mcp.py
src/throughline/manifest/: __init__.py  capture.py  diff.py  harness.py  lockfile_io.py  sanitize.py  session.py  verify.py
src/throughline/modules/: __init__.py  cache.py  citations.py  debug.py  lineage.py  manifest_gate.py  metrics.py  observe.py  policy.py  quota.py  retry.py  structured.py  validate.py
src/throughline/presets/: demo.toml
tests/: test_cache.py  test_citations.py  test_cli.py  test_diagnostics.py  test_early_return.py  test_flow.py  test_harness_integrations.py  test_lineage.py  test_manifest.py  test_manifest_gate.py  test_manifest_session.py  test_mcp.py  test_mcp_client.py  test_modules.py  test_policy.py  test_preset_slots.py  test_presets.py  test_quota.py  test_registry_kinds.py  test_store.py  test_structured.py  test_wrap.py
tests/data/harness_homes/claude/.claude/: settings.json
tests/data/harness_homes/codex/.codex/: config.toml
tests/data/transcripts/: claude_code_sample.jsonl  codex_sample.jsonl  cursor_sample.jsonl
tests/data/workspaces/claude_proj/: CLAUDE.md
tests/data/workspaces/cursor_proj/: .cursorrules
(+2 files in other folders)
