[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "throughline"
dynamic = ["version"]  # single source of truth: throughline.__version__
description = "Framework-neutral control plane for agents and LLM pipelines: a zero-dependency orchestration kernel with pluggable presets, validation, metrics, observability and line-level lineage."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "idxoid" }]
keywords = ["llm", "agents", "orchestration", "pipeline", "lineage", "observability", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
# Core is zero-dependency by design.
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
schema = ["jsonschema>=4"]
pydantic = ["pydantic>=2"]
otel = ["opentelemetry-api>=1.20"]
dev = ["pytest>=8"]

[project.scripts]
throughline = "throughline.cli:main"

[project.entry-points."throughline.plugins"]
# Third-party packages add their own entry points in this group;
# `throughline.registry.load_plugins()` discovers them automatically.

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "throughline.__version__" }

[tool.setuptools.package-data]
throughline = ["presets/*.toml", "py.typed"]
